--- a/Index.html
+++ b/Index.html
@@ -1,5 +1,23 @@
 <!DOCTYPE html>
 
 <html lang="pt-br">
-    
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="=IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scaled=1.0">
+        <title>Conheça Rick and Morty</title>
+ </head>
+ <body>
+    <main>
+        <section>
+            <img alt="Imagem com o logo Rick and Morty e os personagens principais" src="https://images-na.ssl-images-amazon.com/images/I/51t3tNMN6QL._SX329_BO1,204,203,200_.jpg">
+<ul>
+    <li>Nome: </li>
+    <li>Espécie: </li>
+    <li> Está vivo? </li>
+    </ul>
+    <button> Conheça um Personagem </button>
+    </section>
+</main> 
+ </body>
 </html>
