--- a/Index.html
+++ b/Index.html
@@ -12,7 +12,7 @@
     <main>
         <section>
             <img alt="Imagem com o logo Rick and Morty e os personagens principais" src="https://images-na.ssl-images-amazon.com/images/I/51t3tNMN6QL._SX329_BO1,204,203,200_.jpg">
-<ul>
+            <ul id="detalhes-container">
     <li>Nome: </li>
     <li>Espécie: </li>
     <li> Está vivo? </li>
