--- a/Index.html
+++ b/Index.html
@@ -7,18 +7,37 @@
         <meta name="viewport" content="width=device-width, initial-scaled=1.0">
         <title>Conheça Rick and Morty</title>
         <link rel="stylesheet" href="Style.css">
+        <script src="script.js" defer></script>
  </head>
  <body>
     <main>
-        <section>
-            <img alt="Imagem com o logo Rick and Morty e os personagens principais" src="https://images-na.ssl-images-amazon.com/images/I/51t3tNMN6QL._SX329_BO1,204,203,200_.jpg">
-            <ul id="detalhes-container">
-    <li>Nome: </li>
-    <li>Espécie: </li>
-    <li> Está vivo? </li>
+    <section>
+        <img alt="" src="">
+        <ul id="detalhes-container">
+            <li>Nome: <p id="nome"></p></li>
+            <li>Espécie: <p id="especie"></p></li>
+            <li>Está Vivo? <p id="condicao"></p></li>
     </ul>
-    <button> Conheça um Personagem </button>
+    <section>
+        <img alt="Imagem com o logo Rick and Morty e os personagens principais" src="https://images-na.ssl-images-amazon.com/images/I/51t3tNMN6QL._SX329_BO1,204,203,200_.jpg">
+        <ul id="detalhes-container">
+            <li>Nome: <p id="nome"></p></li>
+            <li>Espécie: <p id="especie"></p></li>
+            <li>Está Vivo? <p id="condicao"></p></li>
+    </ul>
+
     </section>
+    </section>
+        <section>
+        <img alt="Imagem com o logo Rick and Morty e os personagens principais" src="https://images-na.ssl-images-amazon.com/images/I/51t3tNMN6QL._SX329_BO1,204,203,200_.jpg">
+        <ul id="detalhes-container">
+            <li>Nome: <p id="nome"></p></li>
+            <li>Espécie: <p id="especie"></p></li>
+            <li>Está Vivo? <p id="condicao"></p></li>
+    </ul>
+    
+    </section>
+    <button id="botao">Conheça personagens Rick And Morty</button>
 </main> 
  </body>
 </html>
